reorder, weil ibbi.

--- a/chat.html
+++ b/chat.html
@@ -317,7 +317,8 @@
 
             // Adds badges and pronouns to the user line
             if (config["badges"] !== false) {
-                el_user.appendChild(el_badges);
+                //el_user.appendChild(el_badges); ibbi!
+                div_message.appendChild(el_badges);
             }
             if (config["enable_pronouns"] !== false) {
                 el_user.appendChild(el_pronoun);
