--- a/chat.html
+++ b/chat.html
@@ -10,7 +10,7 @@
         html,
         #chat {
             background: transparent;
-            padding: 10px 0px 0px 0px;
+            padding: 0;
             margin: 0;
             height: 100%;
             width: 100%;
