--- a/chat.html
+++ b/chat.html
@@ -54,6 +54,7 @@
         }
         .msg-text {
             padding-left: 0.2rem;
+            overflow-wrap: break-word;
         }
         .msg-text>img {
             height: 1.3em;
